# septic-app

./: .gitmodules  Cargo.toml  build.zig  scorebook
assets/menu/: Unbenannt.pdn
src/: capitalism.zig  conn4.zig  gob.rs  gobblers.zig  main.rs  main.zig  menu.rs  menu.zig  ui.zig
src/capitalism/: Algo.zig  Board.zig
src/conn4/: Board.zig
src/gobblers/: Algo.zig  Board.zig
src/menu/: ui.zig
