[package]
name = "septic_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freya = { git = "https://github.com/marc2332/freya" }
dioxus = {version = "0.5.6", features = ["macro", "hooks"], default-features = false }
gobblers = { git = "https://github.com/seppelin/gobblers-lib.git" }
skia-safe = "0.75.0"
tokio = "1.38.0"
dioxus-router = "0.5.6"
